// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-mixed-field Renders \`c-mixed-field\` with boolean type correctly 1`] = `
<div
  class="mixed-field"
>
  <div
    class="v-select mixed-field__type-selector"
    dense="dense"
    error-messages=""
    hide-details="hide-details"
    label="Mixed field with boolean type"
    value="boolean"
  >
    <select>
      <option
        value="string"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          title
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              title
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.string
          </div>
        </div>
      </option>
      <option
        value="number"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          exposure_plus_1
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              exposure_plus_1
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.number
          </div>
        </div>
      </option>
      <option
        value="boolean"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          toggle_on
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              toggle_on
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.boolean
          </div>
        </div>
      </option>
      <option
        value="null"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          space_bar
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              space_bar
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.null
          </div>
        </div>
      </option>
      <option
        value="array"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          view_array
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              view_array
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.array
          </div>
        </div>
      </option>
    </select>
  </div>
  <div
    class="v-input v-input--selection-controls v-input--switch v-input--hide-details theme--light ma-0 ml-3 mixed-field__switch"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-input--selection-controls__input"
        >
          <input
            aria-checked="false"
            aria-label="false"
            role="checkbox"
            type="checkbox"
            value=""
          />
          <div
            class="v-input--selection-controls__ripple"
          />
          <div
            class="v-input--switch__track theme--light"
          />
          <div
            class="v-input--switch__thumb theme--light"
          >
            <transition-stub
              mode="out-in"
              name="fab-transition"
            />
          </div>
        </div>
        <label
          aria-hidden="true"
          class="v-label theme--light"
          style="left: 0px; position: relative;"
        >
          false
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with custom props correctly 1`] = `
<div
  class="mixed-field mixed-field__solo-inverted"
>
  <div
    class="v-select mixed-field__type-selector"
    dense="dense"
    disabled="disabled"
    error-messages="First error message,Second error message"
    flat="true"
    hide-details="hide-details"
    label="Mixed field label"
    solo-inverted="true"
    value="string"
  >
    <select>
      <option
        value="string"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          title
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              title
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            Custom string
          </div>
        </div>
      </option>
      <option
        value="number"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          exposure_plus_1
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              exposure_plus_1
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.number
          </div>
        </div>
      </option>
      <option
        value="boolean"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          toggle_on
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              toggle_on
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.boolean
          </div>
        </div>
      </option>
    </select>
  </div>
  <div
    class="v-input v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-inverted v-text-field--solo-flat v-text-field--enclosed v-input--has-state v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light error--text mixed-field__text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <input
            dense="true"
            disabled="disabled"
            name="mixedFieldName"
            type="text"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with default props correctly 1`] = `
<div
  class="mixed-field"
>
  <div
    class="v-select mixed-field__type-selector"
    dense="dense"
    error-messages=""
    hide-details="hide-details"
    value="string"
  >
    <select>
      <option
        value="string"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          title
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              title
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.string
          </div>
        </div>
      </option>
      <option
        value="number"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          exposure_plus_1
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              exposure_plus_1
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.number
          </div>
        </div>
      </option>
      <option
        value="boolean"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          toggle_on
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              toggle_on
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.boolean
          </div>
        </div>
      </option>
      <option
        value="null"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          space_bar
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              space_bar
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.null
          </div>
        </div>
      </option>
      <option
        value="array"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          view_array
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              view_array
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.array
          </div>
        </div>
      </option>
    </select>
  </div>
  <div
    class="v-input v-text-field v-text-field--single-line theme--light mixed-field__text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <input
            dense="true"
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <div
            class="v-messages__wrapper"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with errors correctly 1`] = `
<div
  class="mixed-field"
>
  <div
    class="v-select mixed-field__type-selector"
    dense="dense"
    error-messages="First error message,Second error message"
    hide-details="hide-details"
    value="string"
  >
    <select>
      <option
        value="string"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          title
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              title
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.string
          </div>
        </div>
      </option>
      <option
        value="number"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          exposure_plus_1
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              exposure_plus_1
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.number
          </div>
        </div>
      </option>
      <option
        value="boolean"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          toggle_on
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              toggle_on
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.boolean
          </div>
        </div>
      </option>
      <option
        value="null"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          space_bar
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              space_bar
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.null
          </div>
        </div>
      </option>
      <option
        value="array"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          view_array
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              view_array
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.array
          </div>
        </div>
      </option>
    </select>
  </div>
  <div
    class="v-input v-text-field v-text-field--single-line v-input--has-state theme--light error--text mixed-field__text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <input
            dense="true"
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
        >
          <div
            class="v-messages__wrapper"
          >
            <div
              class="v-messages__message"
            >
              First error message
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with null type correctly 1`] = `
<div
  class="mixed-field"
>
  <div
    class="v-select mixed-field__type-selector"
    dense="dense"
    error-messages=""
    hide-details="hide-details"
    label="Mixed field with null type"
    value="null"
  >
    <select>
      <option
        value="string"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          title
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              title
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.string
          </div>
        </div>
      </option>
      <option
        value="number"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          exposure_plus_1
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              exposure_plus_1
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.number
          </div>
        </div>
      </option>
      <option
        value="boolean"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          toggle_on
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              toggle_on
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.boolean
          </div>
        </div>
      </option>
      <option
        value="null"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          space_bar
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              space_bar
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.null
          </div>
        </div>
      </option>
      <option
        value="array"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          view_array
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              view_array
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.array
          </div>
        </div>
      </option>
    </select>
  </div>
  <div
    class="v-input v-text-field v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light mixed-field__text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <input
            disabled="disabled"
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <div
            class="v-messages__wrapper"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with null type correctly 2`] = `
<div
  class="mixed-field"
>
  <div
    class="v-select mixed-field__type-selector"
    dense="dense"
    error-messages=""
    hide-details="hide-details"
    label="Mixed field with null type"
    value="array"
  >
    <select>
      <option
        value="string"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          title
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              title
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.string
          </div>
        </div>
      </option>
      <option
        value="number"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          exposure_plus_1
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              exposure_plus_1
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.number
          </div>
        </div>
      </option>
      <option
        value="boolean"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          toggle_on
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              toggle_on
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.boolean
          </div>
        </div>
      </option>
      <option
        value="null"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          space_bar
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              space_bar
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.null
          </div>
        </div>
      </option>
      <option
        value="array"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          view_array
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              view_array
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.array
          </div>
        </div>
      </option>
    </select>
  </div>
  <c-array-mixed-field-stub
    class="ml-3"
    types="[object Object],[object Object],[object Object],[object Object]"
    values="0,1,,false,"
  />
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with number type correctly 1`] = `
<div
  class="mixed-field"
>
  <div
    class="v-select mixed-field__type-selector"
    dense="dense"
    error-messages=""
    hide-details="hide-details"
    label="Mixed field with number type"
    value="number"
  >
    <select>
      <option
        value="string"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          title
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              title
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.string
          </div>
        </div>
      </option>
      <option
        value="number"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          exposure_plus_1
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              exposure_plus_1
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.number
          </div>
        </div>
      </option>
      <option
        value="boolean"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          toggle_on
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              toggle_on
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.boolean
          </div>
        </div>
      </option>
      <option
        value="null"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          space_bar
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              space_bar
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.null
          </div>
        </div>
      </option>
      <option
        value="array"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          view_array
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              view_array
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.array
          </div>
        </div>
      </option>
    </select>
  </div>
  <div
    class="v-input v-text-field v-text-field--single-line v-input--is-label-active v-input--is-dirty theme--light mixed-field__text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <input
            dense="true"
            name="mixedFieldName"
            type="number"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <div
            class="v-messages__wrapper"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with string type and items correctly 1`] = `
<div
  class="mixed-field"
>
  <div
    class="v-select mixed-field__type-selector"
    dense="dense"
    error-messages=""
    hide-details="hide-details"
    label="Mixed field with boolean type"
    value="boolean"
  >
    <select>
      <option
        value="string"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          title
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              title
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.string
          </div>
        </div>
      </option>
      <option
        value="number"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          exposure_plus_1
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              exposure_plus_1
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.number
          </div>
        </div>
      </option>
      <option
        value="boolean"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          toggle_on
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              toggle_on
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.boolean
          </div>
        </div>
      </option>
      <option
        value="null"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          space_bar
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              space_bar
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.null
          </div>
        </div>
      </option>
      <option
        value="array"
      >
        <i
          aria-hidden="true"
          class="v-icon mixed-field__type-selector-icon material-icons theme--light"
          style="font-size: 16px;"
        >
          view_array
        </i>
         
        <div
          class="v-list__tile__avatar mixed-field__type-selector-avatar"
        >
          <div
            class="v-avatar"
            style="height: 40px; width: 40px;"
          >
            <i
              aria-hidden="true"
              class="v-icon mixed-field__type-selector-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              view_array
            </i>
          </div>
        </div>
        <div
          class="v-list__tile__content"
        >
          <div
            class="v-list__tile__title"
          >
            mixedField.types.array
          </div>
        </div>
      </option>
    </select>
  </div>
  <div
    class="v-input v-input--selection-controls v-input--switch v-input--hide-details theme--light ma-0 ml-3 mixed-field__switch"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-input--selection-controls__input"
        >
          <input
            aria-checked="false"
            aria-label="false"
            role="checkbox"
            type="checkbox"
            value=""
          />
          <div
            class="v-input--selection-controls__ripple"
          />
          <div
            class="v-input--switch__track theme--light"
          />
          <div
            class="v-input--switch__thumb theme--light"
          >
            <transition-stub
              mode="out-in"
              name="fab-transition"
            />
          </div>
        </div>
        <label
          aria-hidden="true"
          class="v-label theme--light"
          style="left: 0px; position: relative;"
        >
          false
        </label>
      </div>
    </div>
  </div>
</div>
`;
